# noktah-dashboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.claude/: CLAUDE.md
.claude/rules/backend/: prefect.md
.github/workflows/: ci-cd.yml
app/: app.config.ts  app.vue
app/assets/css/: main.css
app/components/dashboard/: Navbar.vue  Sidebar.vue
app/layouts/: default.vue  error.vue
app/pages/: index.vue  libraries.vue
config/cloudflare/: config.yml
config/loki/: loki-config.yaml
config/nginx/: nginx.conf
config/postgres/: init.sql
config/prometheus/: alert_rules.yml  prometheus.yml
script/: health-check.sh  setup.bat
server/api/: health-check.ts
service/backup/: Dockerfile  backup.py  requirements.txt
service/crewai/: Dockerfile  main.py  requirements.txt
service/crewai/model/: request_models.py  response_models.py
service/prefect/: Dockerfile  README.md  hashmap.py  main.py  pyproject.toml  requirements.txt  run_google_oauth.py
service/prefect/blocks/: google_credentials.py  jira_credentials.py
service/prefect/flows/: __init__.py  content_plan_spreadsheet_to_jira_issue.py
service/prefect/flows/common/: __init__.py
service/prefect/tasks/: google_tasks.py  jira_tasks.py  utility_tasks.py
test/nuxt/: api-crud.test.ts  api-validation.test.ts  health-check-comprehensive.test.ts
test/utils/: api-helpers.ts
